# FastApi-Ai-Summarizer-Enlight

./: .gitignore  README.md  ReadMe.md  docker-compose.yaml  pyproject.toml  requirements.txt  samconfig.toml  template.yaml  test.ipynb  test.py  wiki-dataset-processing.ipynb
api/: Dockerfile  app.py  c-url.sh  main.py  manage.py  mn.py  requirements.txt  run.sh
api/app/: __init__.py  main.py
api/app/models/: package_creator.py  pkl_manager.py
api/app/search/: routers.py  search.py  sources.py  validators.py
api/app/search2/: interfaces.py  routers.py  search.py
api/app/sources/: brittanica.py  models.py
api/app/summarizers/: functions.py  imodels.py  routers.py
api/src/summarizer/: routers.py
api/ui/: index.html  main.css
api/web/: index.html  main.js  reports.html  summarizer.html
archive/: StreamLit.ipynb  bert_summarizer.ipynb  brittanica.ipynb  dotEnv.ipynb  helpers.py  mongo.ipynb  my_decorators.py  server.ipynb  wd.py
archive/wikipedia/: p.o.day.ipynb
src/: linear_regression.ipynb  review_sentiment.ipynb  tfIdf.py  tfidf.ipynb
src/summarizer/: main.ipynb  main.py  test.ipynb
ui/: index.html
web/: main.js  search.php
